--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -16,16 +16,17 @@
 	<body>
 		<nav class="navbar navbar-expand navbar-light bg-light">
 			<div class="nav navbar-nav">
-				<a class="nav-item nav-link active" href="#" aria-current="page">Home <span
+				<a class="nav-item nav-link active" href="/" aria-current="page">Home <span
 						class="visually-hidden">(current)</span></a>
 				<a class="nav-item nav-link" href="/">Inicio</a>
 
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-						data-bs-toggle="dropdown" aria-expanded="false">
+					<a class="nav-item nav-link dropdown-toggle" href="/libros" id="librosDropdown"
+						role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Libros
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<li><a class="dropdown-item" href="/libros">Listar</a></li>
 						<li><a class="dropdown-item" href="/libros/crear">Crear</a></li>
 						<li><a class="dropdown-item" href="/libros/editar">Editar</a></li>
 					</ul>
